evdev: Handle SYN_DROPPED, query the state of buttons

When the kernel event queue overruns, the evdev.c will:
1. Skip events until and up to the next SYN_REPORT
2. Notify the compositor of the lag, the compositor can specify
   a key range of a key buttons to query the state of. The compositor
   will also invalidate the button event counters, if any.
3. Replay the button states and key states to the compositor via
   the usual api with a custom ACTUAL_STATE flag set.
4. Notify the compositor that the lag is over. The compositor
   will check, in case no button is held on the lagged device
   it will prematurely terminate the grab. This can be maybe
   coded even more clever to query all the seat devices, in that case,
   compositor button counter would be restored completely, and grabs
   terminated.

This introduces a new field, enum weston_button_state_update:
 STATE_CHANGE_EVENT	The state has changed, can count these events
 STATE_ACTUAL_UPDATE	The actual state, it might not have changed

This fixes:
   https://bugs.freedesktop.org/show_bug.cgi?id=62368